Correct alignment of arrow on right positioned panes

--- a/src/styles/status.scss
+++ b/src/styles/status.scss
@@ -102,7 +102,7 @@
 
     &::before {
       left: auto;
-      right: 80px;
+      right: 10px;
     }
   }
 }
